# Stisty

./: .gitignore  Cargo.toml  Dockerfile  GENOME_USAGE.md  LICENSE-APACHE  LICENSE-MIT  PRIVACY.md  README.md  TESTING_SUMMARY.md
csv-files/: anova_spring_example_2020.csv  caffeine-sleep.csv  candy-stress-vacation.csv  coffee-area-sleep-donuts.csv  dating-ice-cream.csv  exam_2_data.csv  exam_2_followup_data.csv  exam_3_review_data.csv  final_exam_data.csv  final_exam_prep_data.csv  gpa.csv  halloween-candy.csv  homework.csv  labapalooza_example.csv  mens-shoe-sizes.csv  menudo.csv  movie_data.csv  random.csv  rent-cockroaches.csv  spotify-streaming.csv  student-boredom.csv  student_eyes.csv  superheroes.csv  tinder.csv  womens-shoe-sizes.csv
examples/: genome_analysis.rs
src/: error_types.rs  graphing.rs  lib.rs  logging.rs  main.rs
src/core/: arg_handler.rs  convert.rs  error_types.rs  logging.rs  menu.rs  mod.rs
src/data_types/: csv.rs  data_array.rs  data_relationship.rs  graph.rs  mod.rs  multiple_regression.rs  relationship.rs  simple_linear_regression.rs  statistics.rs
src/functions/: convert.rs  csv.rs  graph.rs  mod.rs  stats.rs  stats_math.rs
src/genetics/: README.md  analysis.rs  mod.rs  models.rs  reference.rs  vcf.rs
src/tests/: tests.rs
stisty-wasm/: AUTHELIA.md  AUTHENTIK.md  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  nginx.conf
stisty-wasm/src/: lib.rs
stisty-wasm/www/: PRIVACY_ARCHITECTURE.md  app.js  compress_vcf.sh  index.html  stisty_wasm.js  stisty_wasm_bg.wasm  style.css
tests/: genetics_integration_test.rs  integration_test.rs  test_data.csv
