[package]
name = "Stisty"
version = "0.3.0"
authors = ["Matt Barham"]
description = "Statistical analysis and genome analyzer toolkit with CLI and WebAssembly support"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/captainzonks/Stisty"
keywords = ["statistics", "cli", "data-analysis", "csv"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "stisty"
path = "src/main.rs"

[[bin]]
name = "build_database"
path = "data-pipeline/src/build_database.rs"
required-features = ["cli"]

[lib]
name = "stisty_lib"
path = "src/lib.rs"

[dependencies]
csv = "1.3.1"
log = "0.4.28"
anyhow = "1.0.100"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0.1"
brotli = "8.0.2"

# WASM-specific dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "Response", "Window"] }

# CLI-only dependencies (optional for WASM builds)
log4rs = { version = "1.4.0", optional = true }
clap = { version = "4.5.48", features = ["derive", "cargo"], optional = true }
inquire = { version = "0.9.1", optional = true }
fuzzy-matcher = { version = "0.3.7", optional = true }
flate2 = { version = "1.0.35", optional = true }
bgzip = { version = "0.3.1", optional = true }

[features]
default = ["cli"]
cli = ["log4rs", "clap", "inquire", "fuzzy-matcher", "flate2", "bgzip"]

[dev-dependencies]
tempfile = "3.23.0"
#assert_cmd = "2.0.16"
#predicates = "3.1.3"