[package]
name = "stisty-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Matt Barham"]
description = "WebAssembly bindings for Stisty genome analysis"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = "0.1"
dlmalloc = "0.2.11"
anyhow = "1.0.100"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

# Use the parent crate's genetics module with no default features (disables CLI deps)
stisty_lib = { path = "..", package = "Stisty", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary

[package.metadata.wasm-pack.profile.release]
wasm-opt = false    # Disable wasm-opt to prevent validation errors